err/appengine-config-transformer.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/appengine_config_transformer-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml_conversion'...
Compiling './lib/python3.5/site-packages/yaml_conversion/converters.py'...
***   File "./lib/python3.5/site-packages/yaml_conversion/converters.py", line 24
    _NANOSECONDS_PER_SECOND = 1000000000L
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yaml_conversion/lib'...
Listing './lib/python3.5/site-packages/yaml_conversion/lib/google'...
Listing './lib/python3.5/site-packages/yaml_conversion/lib/google/appengine'...
Listing './lib/python3.5/site-packages/yaml_conversion/lib/google/appengine/api'...
Compiling './lib/python3.5/site-packages/yaml_conversion/lib/google/appengine/api/validation.py'...
***   File "./lib/python3.5/site-packages/yaml_conversion/lib/google/appengine/api/validation.py", line 335
    except MissingAttribute, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yaml_conversion/lib/google/appengine/api/yaml_listener.py'...
***   File "./lib/python3.5/site-packages/yaml_conversion/lib/google/appengine/api/yaml_listener.py", line 174
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yaml_conversion/lib/google/appengine/api/yaml_object.py'...
***   File "./lib/python3.5/site-packages/yaml_conversion/lib/google/appengine/api/yaml_object.py", line 170
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
